sterlang/examples/neg/src/n06.erlt
-module(n06).
-export([foo/2]).

foo(B, R) ->
    % circularity
    if B -> R#(x); true -> R end.
